--- a/CoLab_TermProj_2023_3-1.ipynb
+++ b/CoLab_TermProj_2023_3-1.ipynb
@@ -978,7 +978,19 @@
         "!head CLIP-let7d.pileup\n",
         "!awk '$2 >= 48689488 && $2 <= 48689590 { print $0; }' CLIP-let7d.pileup > CLIP-let7d-gene.pileup\n",
         "!tail CLIP-let7d-gene.pileup\n",
-        "!! wc -l CLIP-let7d-gene.pileup # 87"
+        "!! wc -l CLIP-let7d-gene.pileup # 87\n",
+        "!! samtools view -b CLIP-let7d.bam | bamToBed -i - > CLIP-let7d.bed"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# sort & index\n",
+        "!samtools sort CLIP-let7d.bam > CLIP-let7d.sorted.bam\n",
+        "!samtools index CLIP-let7d.sorted.bam > CLIP-let7d.sorted.bam.bai"
       ]
     },
     {
