--- a/CoLab_TermProj_2023_3-1.ipynb
+++ b/CoLab_TermProj_2023_3-1.ipynb
@@ -329,7 +329,7 @@
       "outputs": [],
       "source": [
         "!samtools view -b -o CLIP-let7g.bam CLIP-35L33G.bam chr9:106056039-106056126 # mirlet7g, 88bp임\n",
-        "!samtools view CLIP-let7g.bam | wc -l # 163 bam 파일에 163개의 read가 매핑됨. 이건 좀 봐야됨"
+        "!samtools view CLIP-let7g.bam | wc -l # 163 bam 파일에 163개의 read가 매핑됨."
       ]
     },
     {
@@ -943,7 +943,18 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "!grep -i mirlet7g gencode.gtf\n",
+        "!samtools view -b -o CLIP-let7g.bam CLIP-35L33G.bam chr9:106056039-106056126 # mirlet7g, 88bp임\n",
+        "!samtools view CLIP-let7g.bam | wc -l # 163 bam 파일에 163개의 read가 매핑됨.\n",
+        "!samtools mpileup CLIP-let7g.bam > CLIP-let7g.pileup\n",
+        "!wc -l CLIP-let7g.pileup # 68548\n",
+        "!head CLIP-let7g.pileup\n",
+        "!awk '$2 >= 48689488 && $2 <= 48689590 { print $0; }' CLIP-let7g.pileup > CLIP-let7g-gene.pileup\n",
+        "!tail CLIP-let7g-gene.pileup\n",
+        "!wc -l CLIP-let7g-gene.pileup \n",
+        "!samtools view -b CLIP-let7g.bam | bamToBed -i - > CLIP-let7g.bed"
+      ]
     },
     {
       "attachments": {},
@@ -968,18 +979,16 @@
         }
       ],
       "source": [
-        "# !grep -i Mirlet7f-1 gencode.gtf\n",
         "!grep -i Mirlet7d gencode.gtf\n",
-        "# !samtools view -b -o CLIP-let7d.bam CLIP-35L33G.bam chr9:106056039-106056126 # mirlet7d, 88bp임\n",
-        "!samtools view -b -o CLIP-let7d.bam CLIP-35L33G.bam chr13:48689488-48689590 # mirlet7d, 88bp임\n",
-        "!samtools view CLIP-let7d.bam | wc -l # 187 bam 파일에 187 개의 read가 매핑됨. 이건 좀 봐야됨\n",
+        "!samtools view -b -o CLIP-let7d.bam CLIP-35L33G.bam chr13:48689488-48689590 # mirlet7d, 102bp임\n",
+        "!samtools view CLIP-let7d.bam | wc -l # bam 파일에 187 개의 read가 매핑됨.\n",
         "!samtools mpileup CLIP-let7d.bam > CLIP-let7d.pileup\n",
-        "!wc -l CLIP-let7d.pileup # 87\n",
+        "!wc -l CLIP-let7d.pileup # 187\n",
         "!head CLIP-let7d.pileup\n",
         "!awk '$2 >= 48689488 && $2 <= 48689590 { print $0; }' CLIP-let7d.pileup > CLIP-let7d-gene.pileup\n",
         "!tail CLIP-let7d-gene.pileup\n",
-        "!! wc -l CLIP-let7d-gene.pileup # 87\n",
-        "!! samtools view -b CLIP-let7d.bam | bamToBed -i - > CLIP-let7d.bed"
+        "!! wc -l CLIP-let7d-gene.pileup # 187\n",
+        "!! samtools view -b CLIP-let7d.bam | bamToBed -i - > CLIP-let7d.bed # bed 파일로 변환 UCSC genome browser에서 확인 가능"
       ]
     },
     {
@@ -990,7 +999,23 @@
       "source": [
         "# sort & index\n",
         "!samtools sort CLIP-let7d.bam > CLIP-let7d.sorted.bam\n",
-        "!samtools index CLIP-let7d.sorted.bam > CLIP-let7d.sorted.bam.bai"
+        "!samtools index CLIP-let7d.sorted.bam > CLIP-let7d.sorted.bam.bai\n",
+        "!track type=bam name=\"Indexing\" description=\"Indexing\" visibility=full color=78,40,245 altColor=245,40,78 priority=20 bigDataUrl=https://raw.githubusercontent.com/J-Sub/bioinfo1/main/genome/CLIP-let7d.sorted.bam\n",
+        "# 이렇게 해야 index상에서 sequence가 표기됨"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Count reads\n",
+        "!bedtools genomecov -ibam CLIP-let7d.sorted.bam -bg > CLIP-let7d.sorted.bam.bedGraph\n",
+        "!sort -k1,1 -k2,2n CLIP-let7d.sorted.bam.bedGraph > CLIP-let7d.sorted.bam.sorted.bedGraph\n",
+        "!bedGraphToBigWig CLIP-let7d.sorted.bam.sorted.bedGraph chrom.sizes CLIP-let7d.sorted.bam.bw\n",
+        "# https://hgdownload.soe.ucsc.edu/goldenPath/mm39/bigZips/mm39.chrom.sizes  # mouse genome size\n",
+        "!bigWigToBedGraph CLIP-let7d.sorted.bam.bw CLIP-let7d.sorted.bam.bedGraph"
       ]
     },
     {
@@ -1033,7 +1058,6 @@
         "pileup['matches'] = pileup['basereads'].apply(lambda x: toremove.sub('', x))\n",
         "\n",
         "\n",
-        "\n",
         "from pyentrp import entropy as ent\n",
         "pileup['entropy'] = pileup['matches'].apply(lambda x: ent.shannon_entropy(x))\n",
         "\n",
@@ -1051,24 +1075,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 23,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa'"
-            ]
-          },
-          "execution_count": 68,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "pileup['matches'].iloc[3]\n",
-        "# pileup"
+        "# import pandas as pd \n",
+        "# readcount = pd.read_csv('./genome/CLIP-let7d.sorted.bam.bed', sep='\\t', header=None)\n",
+        "# readcount\n",
+        "\n",
+        "# readcount['Pair_Count'] = readcount.groupby([1, 2])[0].transform('count')\n",
+        "# readcount.drop_duplicates(subset=[1, 2], inplace=True)\n",
+        "# readcount.to_csv('./genome/CLIP-let7d-read.sorted.bam.bed', sep='\\t', index=False, header=False)\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
